Add: coffee shop project submission

--- a/Project/03_coffee_shop_full_stack/starter_code/.gitignore
+++ b/Project/03_coffee_shop_full_stack/starter_code/.gitignore
@@ -2,7 +2,9 @@ venv/
 .vscode/
 __pycache__/
 test.db
-
+backend/env
+../../lesson-1-Foundation
+../../lesson-2-Identity-and-Authentication
 # OS generated files #
 ######################
 .DS_Store
